# Vegetation-Parameter-Estimation-Module

./: README.md  apps.py  models.py  serializers.py  urls.py  views.py
HDR_parser/: HDRParser.py  hdr_wrapped_obj.py
LUT_processor/: LUT_processor.py  partition_resampler.py
VICalculator/: vegetation_indices.py
VPE/: veg_parameter_approx.py  vi_approximation_functions.py
utils/: utils.py
utils/config_files/: S2-SRF.csv
utils/executable_scripts/: c_image  rs_cropper  rs_sentinel
utils/executable_scripts/source_codes/c_image/: CMakeLists.txt  main.c  manual_compile
utils/executable_scripts/source_codes/rs_sentinel_resample/: Cargo.toml
utils/executable_scripts/source_codes/rs_sentinel_resample/src/: main.rs
utils/executable_scripts/source_codes/rs_splitter/: Cargo.toml
utils/executable_scripts/source_codes/rs_splitter/src/: main.rs
