[package]
name = "rs_sentinel"
version = "0.1.0"
authors = ["Vladimir Lazarik <xlazarik@fi.muni.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
json = "0.12.4"
serde_json = { version = "1.0.64", features = ["preserve_order"] }

[profile.release]
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false